# Market-Maker

./: .gitignore  Cargo.toml  README.md  env.example  main_trading_bot.py  pyproject.toml
mm_bot/: __init__.py  config.py  logging.py  metrics.py
mm_bot/backtesting/: matching_engine.py
mm_bot/exchanges/: __init__.py  base.py  hyperliquid_official.py
mm_bot/execution/: __init__.py  hedger.py  order_manager.py
mm_bot/live/: __init__.py  live_runner.py  paper_runner.py
mm_bot/marketdata/: __init__.py  l2_cache.py  trades_cache.py
mm_bot/risk/: __init__.py  inventory.py  kill_switch.py  limits.py
mm_bot/strategy/: __init__.py  avellaneda_stoikov.py  quoting.py
mm_bot/utils/: __init__.py  fees.py  latency.py  safemath.py  time.py
src/: config.rs  lib.rs  main.rs  order_book.rs  risk.rs  strategy.rs  utils.rs
